Added Project Files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Salma's Gallery</title>
 </head>
 <body>
+<nav>
+    <div></div>
+</nav>
 
 <!--Main Css File-->
 <link rel="stylesheet" href="CSS/style.css" type="text/css"/>
